# contravento-application-python

./: .dockerignore  .env.dev  .env.dev.example  .env.local-minimal.example  .env.local.example  .env.preproduction.example  .env.prod.example  .env.staging.example  .gitignore  CICD_MIGRATION_GUIDE.md  CLAUDE.md  CONTRAVENTO.md  CONTRIBUTING.md  CYCLING_TYPES_IMPLEMENTATION.md  DOCKER_COMPOSE_ENVIRONMENTS.md  DOCKER_DEPLOYMENT.md  DOCUMENTATION_AUDIT_REPORT.md  ENVIRONMENTS.md  GPS_COORDINATES_NEXT_STEPS.md  GPS_COORDINATES_TEST_RESULTS.md  JENKINS_CI_ANALYSIS.md  JENKINS_CI_README.md  JENKINS_GUIDE.md  JENKINS_README.md  JENKINS_SETUP.md  Jenkinsfile  Jenkinsfile.full  Jenkinsfile.proposed  MANUAL_TESTING_GUIDE.md  MIGRATION_IMPACT_ANALYSIS.md  MVP_RELEASE_NOTES.md  NEXT_STEPS.md  PRE_PUSH_CHECKS.md  QUICK_START.md  README.md  ROADMAP.md  ROOT_FILES_EVALUATION.md  TESTING.md  backend.ps1  cleanup-temp.ps1  (+41 more)
backend/: .coveragerc  .env.dev.example  .env.example  .env.prod.example  .env.staging.example  .env.test  .env.testing.example  Dockerfile  INTEGRATION_TESTS_PROGRESS.md  README.md  alembic.ini  pyproject.toml  pytest.ini  test_integration_results.txt  test_output.txt  test_photos_manual.ps1  test_photos_simple.py  test_results.txt
backend/config/: README.md  cycling_types.yaml
backend/docs/: ARCHITECTURE.md  CYCLING_TYPES.md  CYCLING_TYPES_IMPLEMENTATION.md  DEPLOYMENT.md  DOCKER_DEPLOYMENT.md  ENVIRONMENTS.md  FINAL_VALIDATION.md  MAILHOG_SETUP.md  MVP_RELEASE_NOTES.md  POSTGRESQL_QUICKSTART.md  QUALITY_CHECKLIST.md  ROLES.md  TESTING_CONFIGURATION.md  TESTING_GUIDE.md
backend/docs/api/: CYCLING_TYPES_POSTMAN.md  ContraVento_GPS_Coordinates.postman_collection.json  GPS_COORDINATES_MANUAL_TESTING.md  GPS_COORDINATES_POSTMAN_GUIDE.md  MANUAL_TESTING.md  POSTMAN_COLLECTION.md  README.md  README_GPS_TESTING.md  TAGS_TESTING.md  USER_PROFILES_MANUAL.md  USER_PROFILES_POSTMAN.md
backend/docs/archive/: .gitkeep  README.md  v0.1.0-DEPLOYMENT.md  v0.1.0-DOCKER_DEPLOYMENT.md  v0.1.0-DOCUMENTATION_AUDIT_REPORT.md  v0.2.0-DEPLOYMENT.md
backend/scripts/: GPS_ANALYSIS_SCRIPTS.md  README.md  analyze_gpx_segments.py  analyze_gpx_timing.py  analyze_slow_segments.py  check_route_stats.py  check_stats.py  check_test_data.py  create_admin.py  create_verified_user.py  delete_corrupt_stats.py  docker-entrypoint.sh  init-db.sql  init_dev_data.py  promote_to_admin.py  recalculate_route_stats.py  seed_achievements.py  seed_cycling_types.py  seed_trips.py  setup-postgres-testing.ps1  setup-postgres-testing.sh  test-postgres-connection.py  test_endpoint.py  test_gpx_statistics.ps1  test_gpx_statistics.sh  test_stats_endpoint.py  test_tags.sh  verify-postgres.sh
backend/scripts/analysis/: EXECUTIVE_SUMMARY.md  PERFORMANCE_DIAGNOSTICS.md  README.md  analyze_gpx_segments.py  analyze_gpx_timing.py  analyze_slow_segments.py  app_gpx_stats.py  check_route_stats.py  delete_corrupt_stats.py  diagnose_gpx_performance.py  gpx_stats.py  recalculate_route_stats.py  test_gpx_analyze.py
backend/scripts/config/: blocked_words.txt
backend/scripts/deployment/: docker-entrypoint.sh  mvp-check.sh
backend/scripts/dev-tools/: check_latest_gpx.py  check_stats.py  clean_trips.py
backend/scripts/seeding/: add_test_trip_with_coordinates.py  init_dev_data.py  seed_activity_feed.py  seed_cycling_types.py  seed_trips.py
backend/scripts/testing/: README.md  check_feed.py  check_gpx_trips.py  check_latest_activity.py  test_gpx_statistics.ps1  test_route_statistics.py  validate_activity_feed.py
backend/scripts/user-mgmt/: create_admin.py  manage_follows.py  promote_to_admin.py
backend/scripts/user_mgmt/: create_verified_user.py
backend/scripts/wrappers/: analyze-segments.sh  analyze-slow-segments.sh  analyze-timing.sh  check-stats.sh  compare-gpx-stats.sh  delete-stats.sh  recalculate-stats.sh
backend/src/: config.py  database.py  main.py
backend/src/api/: __init__.py  activity_feed.py  activity_likes.py  auth.py  comments.py  cycling_types.py  deps.py  feed.py  gpx_routes.py  gpx_wizard.py  likes.py  notifications.py  pois.py  profile.py  social.py  stats.py  trip_crud_router.py  trip_photos_router.py  trip_user_router.py  trips.py
backend/src/migrations/: alembic.ini  env.py
backend/src/models/: __init__.py  activity_feed_item.py  activity_like.py  auth.py  comment.py  comment_report.py  cycling_type.py  gpx.py  like.py  notification.py  poi.py  route_statistics.py  share.py  social.py  stats.py  trip.py  user.py
backend/src/schemas/: __init__.py  activity_like.py  api_response.py  auth.py  comment.py  cycling_type.py  feed.py  gpx.py  gpx_wizard.py  like.py  notification.py  poi.py  profile.py  route_statistics.py  social.py  stats.py  trip.py  user.py
backend/src/services/: __init__.py  activity_like_service.py  auth_service.py  comment_service.py  cycling_type_service.py  difficulty_calculator.py  feed_service.py  gpx_service.py  like_service.py  notification_service.py  poi_service.py  profile_service.py  social_service.py  (+4 more)
backend/test_data/: README_GPX_TESTS.md  test_realistic_gradients.gpx  test_with_timestamps.gpx  test_without_timestamps.gpx
backend/tests/: README.md  conftest.py  helpers.py
(+884 files in other folders)
