[tool.poetry]
name = "contravento-backend"
version = "0.1.0"
description = "ContraVento - Plataforma social de cicloturismo (Backend API)"
authors = ["ContraVento Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
# Core framework
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}

# Database & ORM
sqlalchemy = "^2.0.0"
alembic = "^1.12.0"
aiosqlite = "^0.19.0"
asyncpg = "^0.29.0"

# Validation & serialization
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"

# Authentication & security
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "4.0.1"  # Pin to 4.0.1 for passlib compatibility (4.1+ and 5.x have version detection issues)
python-multipart = "^0.0.6"

# File handling
aiofiles = "^23.2.0"
pillow = "^10.1.0"

# Content processing (Travel Diary)
bleach = "^6.1.0"
googlemaps = "^4.10.0"

# Email
aiosmtplib = "^3.0.0"
email-validator = "^2.1.0"
tzdata = "^2025.3"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
pytest-benchmark = "^4.0.0"
httpx = "^0.25.0"
faker = "^20.0.0"
openapi-core = "^0.18.0"
pyyaml = "^6.0.0"
locust = "^2.17.0"

# Code quality
black = "^23.11.0"
ruff = "^0.1.6"
mypy = "^1.7.0"

# Type stubs
types-aiofiles = "^23.2.0"
types-passlib = "^1.7.7"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "B904",  # raise ... from err (exception chaining) - non-critical
    "E402",  # module level import not at top (some intentional cases)
    "E722",  # bare except (allowed in specific test cases)
    "B017",  # pytest.raises(Exception) - allowed in tests
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "migrations",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports
"src/models/*.py" = ["F821"]  # undefined names (SQLAlchemy forward references)
"tests/*.py" = ["F841"]  # unused variables in tests (fixtures, etc.)
"tests/**/*.py" = ["F811"]  # redefinition of unused names in tests

[tool.mypy]
python_version = "3.11"
# Relaxed strict mode for pragmatic type checking
strict = false
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false  # Allow functions without type annotations
disallow_any_generics = false  # Allow generic types without parameters
check_untyped_defs = false  # Don't check bodies of untyped functions
no_implicit_optional = false  # Allow implicit Optional
warn_redundant_casts = true
warn_unused_ignores = false  # Don't warn on unused type: ignore
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true
explicit_package_bases = true
namespace_packages = true
mypy_path = "."
# Allow SQLAlchemy patterns
disable_error_code = ["misc", "assignment", "arg-type", "return-value", "call-arg", "no-untyped-call", "no-untyped-def"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "src.models.*"
# SQLAlchemy models have special patterns
disable_error_code = ["name-defined", "misc", "var-annotated"]

[[tool.mypy.overrides]]
module = "src.migrations.*"
# Alembic migrations autogenerated
ignore_errors = true

[tool.pytest.ini_options]
minversion = "7.0"
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "contract: Contract tests",
    "e2e: End-to-end tests",
    "performance: Performance tests",
    "slow: Slow running tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__init__.py",
]

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
